# cpra

./: README.md  pyproject.toml
notebook/: cpra_calculation.ipynb  pdf_extraction.ipynb
src/cpra/: cpra_calculation.py
src/cpra/pdf_extraction/: v2503.py
