[project]
name = "cpra"
version = "0.1.0"
description = "CPRA calcuation for transplant candidates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the 'src' directory